turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: not found: value i
if (getCouleurSol()==colors(i)){
                            ^LangtonsAnt:9: error: not found: value i
if (rule(i)=='R'){
         ^LangtonsAnt:14: error: not found: value i
if(i<colors.length-1){
   ^LangtonsAnt:15: error: not found: value n
	setCouleurBrosse(colors(n+1))
                                ^