turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code

var col:Color=Color.BLACK

def step(rule:Array[Char], colors:Array[Color]) {

if (getCouleurSol()==colors(i)){

if (rule(i)=='R'){
	right();
}else{	
	left();
}
if(i<colors.length-1){
	setCouleurBrosse(colors(n+1))
}else{
	setCouleurBrosse(colors(0))
}
baisseBrosse();
leveBrosse();
avance();
}
}